<resources>
    <string name="app_name">MentorQ</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="konsultasi_title">"Konsultasi Umum"</string>
    <string name="konsultasi_desc">"Temukan solusi dari berbagai permasalahanmu dari orang-orang yang berpengalaman"</string>
    <string name="weakness_title">"Beat your Weakness"</string>
    <string name="weakness_desc">"Atasi kelemahanmu untuk mencapai karir yang gemilang!"</string>
    <string name="advance_title">"Advance your Skill"</string>
    <string name="advance_desc">"Maksimalkan potensi, perdalam skill agar menjadi professional di bidangmu"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
